Use valueOf() for rather than construct new instances for potential caching